--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 django-crispy-forms = "*"
 pillow = "*"
 environs = {extras = ["django"], version = "*"}
+gunicorn = "*"
 
 [dev-packages]
 
